fixed major bug with layout. minor styling needed before MVP on mobile and desktop

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body{
     display:flex;
     flex-flow: column nowrap;
     align-items: center;
-    max-width:80%;
+    max-width:450px;
     /* max-height:30%; */
     /* margin:80px 30px 0px 30px; */
     
@@ -29,7 +29,7 @@ body{
 }
 
 .imgParent{
-    
+    display: 
    
 }
 
